The rotate tool gizmo no longer shows snapping tick marks when holding CTRL duration the rotation #69273

Closed
opened 2019-08-29 01:10:02 +02:00 by Jesse Yurkovich · 4 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: Quadro 600/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 369.09

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: Unknown Unknown, hash: 69a966aca0
Worked: (optional)

Short description of error
The rotate Tool gizmo used to show little 5-degree tick marks when holding CTRL during the rotation. In recent builds this is now gone. CTRL will still snap to 5-degree increments but there's no visual indication that it's doing so in the viewport.

Exact steps for others to reproduce the error

  • Start with default scene

  • Enable the Rotate Tool

  • Pick any of the axis circles on the gizmo and begin dragging...

  • While dragging press and hold the CTRL key

  • Notice no tick marks; however notice that the text in the upper left corner indicates rotation in 5-degree increments still

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: Quadro 600/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 369.09 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: Unknown Unknown, hash: 69a966aca0 Worked: (optional) **Short description of error** The rotate Tool gizmo used to show little 5-degree tick marks when holding CTRL during the rotation. In recent builds this is now gone. CTRL will still snap to 5-degree increments but there's no visual indication that it's doing so in the viewport. **Exact steps for others to reproduce the error** - Start with default scene - Enable the Rotate Tool - Pick any of the axis circles on the gizmo and begin dragging... - While dragging press and hold the CTRL key - Notice no tick marks; however notice that the text in the upper left corner indicates rotation in 5-degree increments still
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Germano Cavalcante self-assigned this 2019-08-29 01:10:51 +02:00
Germano Cavalcante was unassigned by Jesse Yurkovich 2019-08-29 01:11:06 +02:00
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Germano Cavalcante self-assigned this 2019-08-29 01:24:15 +02:00

This issue was referenced by 07b1a5e05c

This issue was referenced by 07b1a5e05c289f37abcfab1b6378b1035c1d4406

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69273
No description provided.