Fix T69273: Rotate tool gizmo not showing incremental snapping tick marks